Ajouts de paramètres pour le timeout de l'approche finale, pour plus tard

--- a/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
+++ b/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
@@ -1,5 +1,7 @@
 navigation:
     finalApproach:
+        globalTimeout: 10.0
+        lightAsservTimeout: 7.0
         skipAsservCamera: 0.0
         skipAsservLaser: 0.0
         arTagAsserv: "empty"
