--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -64,7 +64,10 @@
   <run_depend>common_utils</run_depend>
   <run_depend>geometry_utils</run_depend>
   <run_depend>generateur_taches</run_depend>
-  
+
+
+  <build_depend>cmake_modules</build_depend>
+  <run_depend>cmake_modules</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
