--- a/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
+++ b/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
@@ -1,5 +1,5 @@
 navigation:
-    finalApproach:
+    Docking:
         globalTimeout: 10.0
         lightAsservTimeout: 7.0
         skipAsservCamera: 0.0
