Rédaction du README Petit changement dans le process de dépose (remarque de Vincent sur le tapis qui détecte la présence de l'objet à déposer) L'appel à l'approche contrôlée est commenté

--- a/hardware/gripper/CMakeLists.txt
+++ b/hardware/gripper/CMakeLists.txt
@@ -109,7 +109,7 @@ include_directories(
 add_executable(
 	gripper_node
 	src/gripper_node.cpp
-	src/FA_Client.cpp
+	src/DockingClient.cpp
 )
 
 ## Add cmake target dependencies of the executable/library
