Mise en common de Zone Utilisation du pcl dans la détection de landmarks Modification du env_global pour utilisation de *oneRobot.world Modification de programmes pour correspondre à la mise en common des fonctions "Zone"

--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -131,6 +131,7 @@ add_library(common_utils
   src/controller/PidWithAntiWindUp.cpp
   src/RateLimiter.cpp
   src/RobotPoseSubscriber.cpp
+  src/Zone.cpp
 )
 
 ## Add cmake target dependencies of the library
