Mise en common d'une classe MPS basique pour les informations géométriques + IDs + zone

--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -132,6 +132,7 @@ add_library(common_utils
   src/RateLimiter.cpp
   src/RobotPoseSubscriber.cpp
   src/Zone.cpp
+  src/MPS.cpp
 )
 
 ## Add cmake target dependencies of the library
