--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -5,15 +5,15 @@ project(deplacement_msg)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-	roscpp
-  	rospy
-  	std_msgs
-	message_generation
-	geometry_msgs
-	sensor_msgs
-  	actionlib
-    nav_msgs
-		comm_msg
+roscpp
+rospy
+std_msgs
+message_generation
+geometry_msgs
+sensor_msgs
+actionlib
+nav_msgs
+comm_msg
 )
 
 ## System dependencies are found with CMake's conventions
@@ -51,37 +51,37 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
-DIRECTORY
-	msg
-FILES
-  	Landmarks.msg
-		Machine.msg
-		Machines.msg
-    OccupancyGridFloat.msg
+    DIRECTORY
+        msg
+    FILES
+        Landmarks.msg
+        MPS.msg
+        Machines.msg
+        OccupancyGridFloat.msg
 )
 
 ## Generate services in the 'srv' folder
 add_service_files(
-  FILES
-  ClosestReachablePoint.srv
+    FILES
+        ClosestReachablePoint.srv
 )
 
 ## Generate actions in the 'action' folder
 add_action_files(
-  FILES
-  TrackPath.action
-  MoveToPose.action
-  GeneratePath.action
+    FILES
+        TrackPath.action
+        MoveToPose.action
+        GeneratePath.action
 )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
-	DEPENDENCIES
-  	std_msgs
-  	geometry_msgs
+    DEPENDENCIES
+    std_msgs
+    geometry_msgs
     actionlib
     nav_msgs
-		comm_msg
+    comm_msg
 )
 
 ###################################
@@ -96,9 +96,9 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES trait_im_msg
-  	CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
 #  DEPENDS system_lib
-	CATKIN_DEPENDS message_runtime
+CATKIN_DEPENDS message_runtime
 )
 
 ###########
@@ -109,7 +109,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
-  	${catkin_INCLUDE_DIRS}
+    ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
