Chantier EKF en cours...

--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -5,15 +5,15 @@ project(deplacement_msg)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-	roscpp
-  	rospy
-  	std_msgs
-	message_generation
-	geometry_msgs
-	sensor_msgs
-  	actionlib
+    roscpp
+      rospy
+      std_msgs
+    message_generation
+    geometry_msgs
+    sensor_msgs
+      actionlib
     nav_msgs
-		comm_msg
+        comm_msg
 )
 
 ## System dependencies are found with CMake's conventions
@@ -57,6 +57,7 @@ add_message_files(
         Landmarks.msg
         MPS.msg
         Machines.msg
+        Robot.msg
         OccupancyGridFloat.msg
 )
 
