--- a/common/common_utils/package.xml
+++ b/common/common_utils/package.xml
@@ -47,6 +47,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>occupancy_grid_utils</build_depend>
   <build_depend>deplacement_msg</build_depend>
+  <build_depend>cmake_modules</build_depend>
 
 
   <run_depend>roscpp</run_depend>
