--- a/simulation/gazebo_to_ros/CMakeLists.txt
+++ b/simulation/gazebo_to_ros/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
     deplacement_msg
     gazebo_msgs
     tf
-    gripper_msg
+    robotino_msgs
 )
 
 # Depend on system install of Gazebo
@@ -59,8 +59,6 @@ target_link_libraries(gazebo_to_ros_node
     libgazsim_msgs.so.2014
 )
 add_dependencies(gazebo_to_ros_node
-	trait_im_msg_gencpp
-	deplacement_msg_gencpp
 	${catkin_EXPORTED_TARGETS}
 )
 #set_target_properties(gazebo_to_ros_node PROPERTIES COMPILE_FLAGS "-g3")
