--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -52,6 +52,7 @@
   <build_depend>common_utils</build_depend>
   <build_depend>geometry_utils</build_depend>
   <build_depend>generateur_taches</build_depend>
+  <build_depend>robotino_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -64,6 +65,7 @@
   <run_depend>common_utils</run_depend>
   <run_depend>geometry_utils</run_depend>
   <run_depend>generateur_taches</run_depend>
+  <run_depend>robotino_msgs</run_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
